# BQDCode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: bqdcode.h
libdmtx/: CMakeLists.txt
libqrencode/: CMakeLists.txt
src/: bqdcode.c
test/: main.c
